--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2025-02-01-preview/appconfiguration.json
@@ -354,7 +354,7 @@
             "$ref": "../../../../../common-types/resource-management/v5/types.json#/parameters/LocationParameter"
           },
           {
-            "name": "body",
+            "name": "checkNameAvailabilityParameters",
             "in": "body",
             "description": "The request body",
             "required": true,
