refactor(schemaregistry): migrate to unified folder structure (#36734)
* refactor folder structure

* update path to fix validation error

---------

Co-authored-by: User <user@example.com>

--- a/specification/schemaregistry/data-plane/SchemaRegistry/tspconfig.yaml
+++ b/specification/schemaregistry/data-plane/SchemaRegistry/tspconfig.yaml
@@ -12,8 +12,8 @@ options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "none"
-    emitter-output-dir: "{project-root}/../"
-    output-file: "data-plane/Microsoft.SchemaRegistry/{version-status}/{version}/schemaregistry.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/schemaregistry.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-schemaregistry"
     namespace: "azure.schemaregistry"
