Refactor(containerstorage): migrate to unified folder structure  (#36769)
* Refactor containerstorage folder structure to comply with Azure Guidelines

* Add instruction.md

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -464,7 +464,7 @@
     - options.@azure-tools/typespec-ts.*
     - parameters.service-dir.default
   paths:
-    - containerstorage/ContainerStorage.Management/tspconfig.yaml
+    - containerstorage/resource-manager/Microsoft.ContainerStorage/ContainerStorage/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
