--- a/specification/containerstorage/resource-manager/Microsoft.ContainerStorage/ContainerStorage/tspconfig.yaml
+++ b/specification/containerstorage/resource-manager/Microsoft.ContainerStorage/ContainerStorage/tspconfig.yaml
@@ -11,5 +11,6 @@ options:
     emit-common-types-schema: "never"
     # `arm-resource-flattening` is only used for back-compat for specs existed on July 2024. All new service spec should NOT use this flag
     arm-resource-flattening: true
-    emitter-output-dir: "{project-root}/.."
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/containerstorage.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/containerstorage.json"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
