Update package names to azure-analytics-planetary-computer

--- a/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
+++ b/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
@@ -28,7 +28,7 @@ options:
       name: "@azure-rest/planetarycomputer-rest"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "azure-planetarycomputer"
+    package-dir: "azure-analytics-planetary-computerr"
     namespace: com.azure.planetarycomputer
     partial-update: true
     use-eclipse-language-server: false
