--- a/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
+++ b/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
@@ -23,9 +23,9 @@ options:
     namespace: "Azure.Analytics.PlanetaryComputer"
     model-namespace: false
   "@azure-tools/typespec-ts":
-    package-dir: "planetarycomputer-rest"
+    package-dir: "planetarycomputer"
     package-details:
-      name: "@azure-rest/planetarycomputer-rest"
+      name: "@azure-rest/planetarycomputer"
     flavor: azure
   "@azure-tools/typespec-java":
     package-dir: "azure-analytics-planetary-computerr"
