Apply changes on top of initial commit: change preview version to new stable + modify readme.md.

--- a/specification/security/resource-manager/Microsoft.Security/stable/2025-06-01/defenderForStorageSettings.json
+++ b/specification/security/resource-manager/Microsoft.Security/stable/2025-06-01/defenderForStorageSettings.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Security Center",
     "description": "API spec for Microsoft.Security (Azure Security Center) resource provider",
-    "version": "2025-02-01-preview"
+    "version": "2025-06-01"
   },
   "host": "management.azure.com",
   "schemes": [
