--- a/specification/security/resource-manager/Microsoft.Security/stable/2025-06-01/defenderForStorageSettings.json
+++ b/specification/security/resource-manager/Microsoft.Security/stable/2025-06-01/defenderForStorageSettings.json
@@ -404,6 +404,11 @@
     },
     "MalwareScan": {
       "type": "object",
+      "allOf": [
+        {
+          "$ref": "../../../common/v1/types.json#/definitions/Resource"
+        }
+      ],
       "properties": {
         "properties": {
           "$ref": "#/definitions/MalwareScanProperties"
