remove ArmResponse<ClusterPeerCommandResponse>

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -4022,7 +4022,7 @@
         },
         "x-ms-long-running-operation-options": {
           "final-state-via": "location",
-          "final-state-schema": "#/definitions/Azure.ResourceManager.ArmResponse%3CClusterPeerCommandResponse%3E"
+          "final-state-schema": "#/definitions/ClusterPeerCommandResponse"
         },
         "x-ms-long-running-operation": true
       }
@@ -7851,19 +7851,6 @@
           "description": "Resource id of the remote volume"
         }
       }
-    },
-    "Azure.ResourceManager.ArmResponse<ClusterPeerCommandResponse>": {
-      "type": "object",
-      "description": "Azure operation completed successfully.",
-      "properties": {
-        "body": {
-          "$ref": "#/definitions/ClusterPeerCommandResponse",
-          "description": "The body type of the operation request or response."
-        }
-      },
-      "required": [
-        "body"
-      ]
     },
     "Azure.ResourceManager.ArmResponse<GetGroupIdListForLdapUserResponse>": {
       "type": "object",
