removed unreturned properties, minor fixes

--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/ContainerApps.json
@@ -716,7 +716,7 @@
             "name": "kind",
             "modelAsString": true
           },
-          "description": "Metadata used to render different experiences for resources of the same type; e.g. WorkflowApp or FunctionApp is a kind of Microsoft.App/ContainerApps type. If supported, the resource provider must validate and persist this value."
+          "description": "Metadata to represent the container app kind, representing if a container app is workflowapp or functionapp."
         },
         "properties": {
           "description": "ContainerApp resource specific properties",
