--- a/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/LogicApps_ListConnections.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2025-07-01/examples/LogicApps_ListConnections.json
@@ -19,12 +19,12 @@
               "managedApiConnections": {
                 "office365": {
                   "api": {
-                    "id": "string"
+                    "id": "/subscriptions/8efdecc5-919e-44eb-b179-915dca89ebf9/providers/Microsoft.Web/locations/centraluseuap/managedApis/arm"
                   },
                   "connection": {
-                    "id": "string"
+                    "id": "/subscriptions/8efdecc5-919e-44eb-b179-915dca89ebf9/resourceGroups/examplerg/providers/Microsoft.Web/connections/arm"
                   },
-                  "connectionRuntimeUrl": "string",
+                  "connectionRuntimeUrl": "https://9d51d1ffc9f77572.00.common.logic.azure-apihub.net/apim/arm/connectionruntimeid",
                   "authentication": {
                     "type": "Raw",
                     "scheme": "Key",
